# rah

./: .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/app/: ai.py  auth_utils.py  db.py  embedding_refresh.py  init_db.py  main.py  models.py  ollama_client.py  schema.sql  seed_data.py
backend/app/routers/: ai.py  auth.py  checkup.py  debug.py  programs.py  rah.py  users.py
backend/app/scripts/: backfill_bioresonance_recommendations.py  backfill_descriptions.py  backfill_indications.py  fill_missing_indications.py  generate_combinations.py  harmonise_recommendations.py  rewrite_indications_to_questions.py  seed_base_profiles.py
frontend/: Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: api.ts  index.css  main.tsx
frontend/src/ui/: App.tsx  Checkup.tsx  Landing.tsx  Login.tsx  Rah.tsx  RahDescriptionDrawer.tsx  Users.tsx
frontend/src/ui/layout/: AppShell.tsx
