[tool.poetry]
name = "rah-backend"
version = "0.3.0"
description = "RAH AI Knowledge System backend"
authors = ["AEON"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = "^0.30.1"
SQLAlchemy = {version="^2.0.32", extras=["asyncio"]}
asyncpg = "^0.29.0"
pydantic = "^2.8.2"
httpx = "^0.27.0"
python-multipart = "^0.0.9"
openpyxl = "^3.1.5"
pypdf = "^4.3.1"
argon2-cffi = "^23.1.0"
email-validator = "^2.1.0"
python-jose = {version="^3.3.0", extras=["cryptography"]}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
